@@ -1,3 +1,6 @@
+-------------------------- soilDB 1.5-8 (2015-08-13) ----------------------------
+* fetchKSSL() gets an argument for downloading data by MLRA
+
 -------------------------- soilDB 1.5-7 (2015-03-10) ----------------------------
 * updated the `loafercreek` and `gopheridge` sample datasets
 
